Change Log Signal feature behaviors

--- a/schemas/test_cases/v0/experiment.yaml
+++ b/schemas/test_cases/v0/experiment.yaml
@@ -93,13 +93,7 @@
     # pre-0.15.6 non-Native-API experiments emitted `internal: null` configs
     internal: null
     labels: []
-    log_policies:
-      - pattern: .*uncorrectable ECC error encountered.*
-        actions:
-          - signal: ECC Error
-      - pattern: .*CUDA out of memory.*
-        actions:
-          - signal: CUDA OOM
+    log_policies: []
     max_restarts: 5
     min_validation_period:
       batches: 0
@@ -203,12 +197,10 @@
       drop_capabilities: []
     hyperparameters: {}
     log_policies:
-      - pattern: "*"
-        actions:
-          - signal: "*"
-      - pattern: "*"
-        actions:
-          - signal: "*"
+      - name: "*"
+        pattern: "*"
+      - name: "*"
+        pattern: "*"
     labels: []
     max_restarts: 5
     min_checkpoint_period:
