--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1509,6 +1509,31 @@ commands:
     steps:
       - run: 
           command: pkill -SIGHUP -f "devcluster" && rm -rf /tmp/devcluster/lock
+  
+  make-component:
+    description: "Basic parameterized version of make for building Determined components."
+    parameters:
+      component:
+        type: string
+        default: ""
+      target:
+        type: string
+        default: ""
+      dryrun:
+        type: boolean
+        default: false
+      no_output_timeout:
+        type: string
+        default: "10m"
+    steps:
+      - run:
+          no_output_timeout: <<parameters.no_output_timeout>>
+          command: |
+            if <<parameters.dryrun>>; then
+              make -C <<parameters.component>> <<parameters.target>>
+            else
+              make -C <<parameters.component>> <<parameters.target>>-dryrun
+            fi
 
 jobs:
   build-helm:
