--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -3213,8 +3213,8 @@ jobs:
                 name: Get Determined version branch commits.
                 command: |
                   git fetch origin <<parameters.upgrade-branch>> && git checkout --track origin/<<parameters.upgrade-branch>>
-            - run: make -C master build
-            - run: make -C agent build
+            #- run: make -C master build
+            #- run: make -C agent build
 
       - when:
           condition: <<parameters.run-minikubes>>
