--- a/schemas/test_cases/v0/log_policies.yaml
+++ b/schemas/test_cases/v0/log_policies.yaml
@@ -8,7 +8,7 @@
 - name: invalid log action
   sanity_errors:
     http://determined.ai/schemas/expconf/v0/log-action.json:
-      - "expect one of the followings: cancel_retries, exclude_node, or an legacy object where object.*"
+      - "must be one of \"cancel_retries\" or \"exclude_node\""
   case:
     invalid_action
 
@@ -27,7 +27,7 @@
 - name: invalid legacy log action
   sanity_errors:
     http://determined.ai/schemas/expconf/v0/log-action.json:
-      - "expect one of the followings: cancel_retries, exclude_node, or an legacy object where object.*"
+      - "must be one of \"cancel_retries\" or \"exclude_node\""
   case:
     type: invalid_action
 
@@ -82,11 +82,11 @@
     - pattern: different policy name
       pattern: a
   merged:
-    - pattern: different policy name
-      pattern: a
     - name: policy name
       pattern: a
       action: cancel_retries
+    - pattern: different policy name
+      pattern: a
 
 - name: merge policies
   merge_as: http://determined.ai/schemas/expconf/v0/log-policies.json
@@ -140,15 +140,15 @@
     - pattern: b
       action: cancel_retries
   merged:
-    - pattern: b
-      action: cancel_retries
-    - pattern: b
-      action: exclude_node
     - name: policy 1
       pattern: a
       action: exclude_node
+    - pattern: b
+      action: exclude_node
     - name: policy 2
       pattern: a
+      action: cancel_retries
+    - pattern: b
       action: cancel_retries
 
 - name: default values
@@ -196,12 +196,12 @@
       action:
         type: exclude_node
   merged:
-    - pattern: a
-      action: cancel_retries
     - pattern: b
       action: cancel_retries
     - pattern: b
       action: exclude_node
     - pattern: c
       action: exclude_node
+    - pattern: a
+      action: cancel_retries
 
