--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -408,8 +408,8 @@ commands:
           working_directory: <<parameters.package-location>>
           command: |
             make build
-            pip install --find-links dist <<parameters.package-name>>
-            pip install --no-deps --force-reinstall --find-links dist <<parameters.package-name>>
+            pip install --find-links dist <<parameters.package-name>>==<< pipeline.parameters.det-version >>
+            pip install --no-deps --force-reinstall --find-links dist <<parameters.package-name>>==<< pipeline.parameters.det-version >>
 
   setup-python-venv:
     description: Set up and create Python venv.
@@ -633,12 +633,12 @@ commands:
                     ci.workflow_id:${CIRCLE_WORKFLOW_ID},\
                     ci.job_num:${CIRCLE_BUILD_NUM},\
                     ci.username:${CIRCLE_USERNAME},\
-                    git.tag:${CIRCLE_TAG:-""},\
+                    git.tag:${CIRCLE_TAG},\
                     git.commit:${CIRCLE_SHA1},\
                     git.repo:${CIRCLE_PROJECT_REPONAME},\
                     ci.totalNodes:${CIRCLE_NODE_TOTAL},\
                     ci.nodeIdx:${CIRCLE_NODE_INDEX},\
-                    git.pr_num:${CIRCLE_PR_NUMBER:-""}"
+                    git.pr_num:${CIRCLE_PR_NUMBER}"
 
                     sudo mkdir -p /tmp/artifacts/logs
                     sudo chmod -R a+rw /tmp/artifacts/logs
@@ -702,11 +702,11 @@ commands:
             ci.workflow_id:${CIRCLE_WORKFLOW_ID},\
             ci.job_num:${CIRCLE_BUILD_NUM},\
             ci.username:${CIRCLE_USERNAME},\
-            git.tag:${CIRCLE_TAG:-""},\
+            git.tag:${CIRCLE_TAG},\
             git.commit:${CIRCLE_SHA1},\
             ci.totalNodes:${CIRCLE_NODE_TOTAL},\
             ci.nodeIdx:${CIRCLE_NODE_INDEX},\
-            git.pr_num:${CIRCLE_PR_NUMBER:-""}"
+            git.pr_num:${CIRCLE_PR_NUMBER}"
 
             CMD="DD_CIVISIBILITY_AGENTLESS_ENABLED=true \
             DD_TAGS='${tags}' \
