--- a/.github/workflows/start-release.yml
+++ b/.github/workflows/start-release.yml
@@ -1,5 +1,5 @@
 ---
-name: start-minor-release
+name: "Start minor release"
 
 on: # yamllint disable-line rule:truthy
   workflow_dispatch:
@@ -13,17 +13,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: validate version
+
+      - name: "Validate version"
         run: |
           grep -E -o '[0-9]+\.[0-9]+\.0' <(printf "%s" '${{ github.event.inputs.version }}') && true
-      - name: create branch
+
+      - name: "Setup Go"
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22.0"
+
+      - name: "Install protobuf dependencies."
+        run: "make get-deps-proto"
+
+      - name: "Create release branch"
         run: |
           echo 'Creating branch: release-${{ github.event.inputs.version }}'
           git checkout -b release-${{ github.event.inputs.version }}
-      - name: switch back to main
+
+      - name: "Switch back to main"
         run: |
           git checkout main
-      - name: publish changes to main
+
+      - name: "Publish changes to main"
         run: |
           ./tools/scripts/lock-api-state.sh
           ./tools/scripts/lock-published-urls.sh
