--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -9,7 +9,7 @@ on: # yamllint disable-line rule:truthy
         required: true
 
 jobs:
-  start-release:
+  start-minor-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
