--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -16,7 +16,12 @@ jobs:
 
       - name: "Validate version"
         run: |
-          grep -E -o '[0-9]+\.[0-9]+\.0' <(printf "%s" '${{ github.event.inputs.version }}') && true
+          grep -E -o '[0-9]+\.[0-9]+\.0' <(printf "%s" '${{ github.event.inputs.version }}')
+
+          ret = $?
+          if [[ $ret != 0 ]]; then
+            echo 'Version string must match <[0-9]+\.[0-9]+\.0>. Got: <${{ github.event.inputs.version }}>';
+            exit $ret
 
       - name: Configure git username and e-mail"
         run: |
