--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -15,12 +15,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: "Validate version"
+        shell: bash {0}
         run: |
           grep -E -o '[0-9]+\.[0-9]+\.0' <(printf "%s" '${{ github.event.inputs.version }}')
 
           ret = $?
           if [[ $ret != 0 ]]; then
-            echo 'Version string must match <[0-9]+\.[0-9]+\.0>. Got: <${{ github.event.inputs.version }}>';
+            echo 'Version string must match <[0-9]+\.[0-9]+\.0>. Got: <${{ github.event.inputs.version }}>'
             exit $ret
           fi
 
