Swap YAML string types.

--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -48,8 +48,7 @@ jobs:
           git push -u origin release-${{ github.event.inputs.version }}
 
       - name: "Switch back to main"
-        run: |
-          git checkout main
+        run: "git checkout main"
 
       - name: "Publish changes to main"
         run: |
