--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           go-version: "1.22.0"
 
-      - name: "Install protobuf dependencies."
+      - name: "Install protobuf dependencies"
         run: "make get-deps-proto"
 
       - name: "Create release branch"
