Set explicit job name to remove pesky hyphens.
Add GH_TOKEN env variable to use the DETERMINED_TOKEN secret, otherwise
expect permissions issues when non-admins run the action.

Add explicit contents: write permission.

--- a/.github/workflows/start-minor-release.yml
+++ b/.github/workflows/start-minor-release.yml
@@ -10,6 +10,11 @@ on: # yamllint disable-line rule:truthy
 
 jobs:
   start-minor-release:
+    name: "Start minor release"
+    env:
+      GH_TOKEN: ${{ secrets.DETERMINED_TOKEN }}
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
