feat: Log Signal Exp Config and Monitoring (#9947)
Co-authored-by: Ryan <rb@hpe.com>

--- a/schemas/test_cases/v0/experiment.yaml
+++ b/schemas/test_cases/v0/experiment.yaml
@@ -196,7 +196,11 @@
       add_capabilities: []
       drop_capabilities: []
     hyperparameters: {}
-    log_policies: []
+    log_policies:
+      - name: "*"
+        pattern: "*"
+      - name: "*"
+        pattern: "*"
     labels: []
     max_restarts: 5
     min_checkpoint_period:
