build: INFENG-937: Publish Helm chart release candidates (#10141)
INFENG-937: Publish Helm RCs

Add Helm makefile and CircleCI job to publish Helm chart release
candidates. This is necessary to properly deploy release candidates onto
the new release party cluster. Previously, bumpversion adjusted the
chart version in Chart.yaml and committed that to the release branch,
then rph used this in-tree version as a chart repository to do GKE
cluster upgrades during testing. This is no longer possible, though, so
we need to publish these release candidate versions. (We should probably
be doing this anyway, in the interest of transparency.)

This will create an additional GitHub release every time we cut a
release candidate.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -1910,6 +1910,20 @@ jobs:
           command: make -C agent release-ee
       - run: mkdir /tmp/pkgs && cp -v */dist/*.{rpm,deb,tar.gz} /tmp/pkgs
 
+  publish-helm-gh-rc:
+    docker:
+      - image: <<pipeline.parameters.docker-image>>
+        environment:
+          GO111MODULE: "on"
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - reinstall-go
+      - make-component:
+          component: helm
+          target: release-gh-rc
+
   publish-helm-gh:
     parameters:
       ee:
@@ -5575,6 +5589,12 @@ workflows:
             - build-helm
           context: determined-production
           filters: *release-filters
+
+      - publish-helm-gh-rc:
+          requires:
+            - build-helm
+          context: determined-production
+          filters: *rc-filters
 
       - upload-try-now-template:
           context: determined-production
