INFENG-938: Update version format in Makefiles
Add an optional 'v' in the grep regular expression that computes
previous version tags in GoReleaser Makefile targets for master, agent,
and helm. This ensures continuity between the previous tag format, which
used bare version strings, and the new tag format, all of which begin
with a literal 'v'. Otherwise, when trying to derive a previous tag that
begins with a 'v', the grep would fail.

Note that this would work for the next release, because previous tags
would still satisfy the format. Subsequent releases, however, would be
incorrect. GORELEASER_PREVIOUS_TAG is used for determining which release
notes to include, and having it set incorrectly would cause problems for
the GitHub release.

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -128,21 +128,21 @@ package-ee: packaging/LICENSE buildx
 
 .PHONY: release
 release: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
-release: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
+release: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
 release: packaging/LICENSE buildx
 	goreleaser --rm-dist
 	make publish-nvcr
 
 .PHONY: release-dryrun
 release-dryrun: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)
-release-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
+release-dryrun: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+$$' | grep "$(VERSION_TAG)" -A1 | sed -n '2 p')
 # We intentionally do not invoke `make publish-nvcr(-dryrun)` here.
 release-dryrun: packaging/LICENSE buildx
 	goreleaser --rm-dist -f ./.goreleaser_dryrun.yml
 
 .PHONY: release-ee
 release-ee: export GORELEASER_CURRENT_TAG := $(VERSION_TAG)-ee
-release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^[0-9.]+-ee$$' | grep "$(VERSION_TAG)-ee" -A1 | sed -n '2 p')
+release-ee: export GORELEASER_PREVIOUS_TAG := $(shell git tag --sort=-creatordate | grep -E '^v?[0-9.]+-ee$$' | grep "$(VERSION_TAG)-ee" -A1 | sed -n '2 p')
 release-ee: packaging/LICENSE buildx
 	goreleaser --rm-dist -f ./.goreleaser_ee.yml
 
