collect log and fix debug code

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -735,6 +735,7 @@ commands:
             - collect-task-logs:
                 master_address: "<<parameters.master-scheme>>://<<parameters.master-host>>:<<parameters.master-port>>"
       - store_artifacts:
+          when: always
           path: /tmp/artifacts/logs
       - when:
           condition:
