The release job is skipping the React build step because there are two jobs that attempt to skip the entire job if no changes are detected in specific directories. Previously, bumpversion made it so that, by dint of updating various files, the job would not be skipped. Now that we aren't using it, though, certain downstream jobs are failing because React wasn't built.
To fix this, I've added a "force" variable to the build-react job, to
allow conditionally bypassing the checks if indicated by the
caller. This preserves existing behavior, to avoid potentially other
unintended consequences of beginning to build React everywhere, but also
to avoid running up CircleCI compute bills, as this much extra build
time would probably have a material effect on spending.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2090,14 +2090,25 @@ jobs:
       ee:
         type: boolean
         default: false
+      force:
+        type: boolean
+        default: false
     docker:
       - image: cimg/node:20.9.0
     resource_class: large
     steps:
       - checkout-with-sm
       - add-and-fetch-upstream
-      - skip-if-only-docs
-      - skip-if-only-github
+      - when:
+          condition:
+            - not: force
+          steps:
+            - skip-if-only-docs
+      - when:
+          condition:
+            - not: force
+          steps:
+            - skip-if-only-github
       - react-get-deps
       - run: |
           if <<parameters.dev-mode>>; then
@@ -5539,6 +5550,7 @@ workflows:
       - build-proto:
           filters: *release-and-rc-filters
       - build-react:
+          force: true
           context: determined-production
           filters: *release-and-rc-filters
       - build-docs:
