Set prerelease: auto in both Helm GoReleaser configs. GoReleaser will make intelligent decisions based on the tag and avoid setting release candidate Helm chart releases as "latest".

--- a/helm/.goreleaser.yml
+++ b/helm/.goreleaser.yml
@@ -11,6 +11,7 @@ release:
   extra_files:
     - glob: build/determined-latest.tgz
       name_template: "determined-helm-chart_{{ .Env.VERSION }}.tgz"
+  prerelease: auto
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
