--- a/helm/.goreleaser_ee.yml
+++ b/helm/.goreleaser_ee.yml
@@ -11,6 +11,7 @@ release:
   extra_files:
     - glob: build/determined-latest.tgz
       name_template: "determined-helm-chart_{{ .Env.VERSION }}.tgz"
+  prerelease: auto
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
