--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -675,13 +675,14 @@ commands:
 
             # Remove prior test results
             rm -f "<<parameters.junit-path>>"
-
+            echo "Removed prior results"
             pytest --setup-plan -m '<<parameters.mark>>' | egrep '\.py s*$' | sed 's/\.py.*$/.py/' > /tmp/all-relevant-files
             if [ ! -s /tmp/all-relevant-files ]; then
               echo 'No test files found!'
               exit 1
             fi
-
+            echo "Relevant files:"
+            cat /tmp/all-relevant-files
             if nc -zv <<parameters.master-host>> <<parameters.master-port>> 2>/dev/null; then
               echo "Determined user list from master '<<parameters.master-scheme>>://<<parameters.master-host>>:<<parameters.master-port>>'"
               DET_MASTER_CERT_FILE=noverify DET_USER=admin DET_PASS=${INITIAL_USER_PASSWORD} \
@@ -689,7 +690,8 @@ commands:
             else
               echo "No Determined master listening on '<<parameters.master-scheme>>://<<parameters.master-host>>:<<parameters.master-port>>'"
             fi
-
+            
+            echo "Found master, proceeeding with tests"
             tags="test.mark:<<parameters.mark>>,\
             ci.pipeline_id:${CIRCLE_PIPELINE_ID},\
             ci.workflow_id:${CIRCLE_WORKFLOW_ID},\
@@ -719,7 +721,8 @@ commands:
             --junit-xml='<<parameters.junit-path>>' \
             <<parameters.extra-pytest-flags>>"
 
-            echo "$CMD"
+            
+            echo "Command to execute: $CMD"
             cat /tmp/all-relevant-files | circleci tests run --command="$CMD" \
             --verbose --split-by=timings
             pytest_status=$?
