--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -676,6 +676,7 @@ commands:
             # Remove prior test results
             rm -f "<<parameters.junit-path>>"
             echo "Removed prior results"
+            pytest --setup-plan -m '<<parameters.mark>>' | egrep '\.py s*$' | sed 's/\.py.*$/.py/'
             pytest --setup-plan -m '<<parameters.mark>>' | egrep '\.py s*$' | sed 's/\.py.*$/.py/' > /tmp/all-relevant-files
             echo "Relevant files:"
             cat /tmp/all-relevant-files
