--- a/examples/deepspeed/gpt_neox/zero1.yaml
+++ b/examples/deepspeed/gpt_neox/zero1.yaml
@@ -43,5 +43,5 @@ entrypoint:
   - python3
   - -m
   - determined.launch.deepspeed
-  - --trial
-  - gpt2_trial:GPT2Trial
+  - python3
+  - trainer.py
