--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -2697,10 +2697,18 @@ jobs:
     executor: << parameters.executor-name >>
     steps:
       - checkout
+      - unless:
+          condition: << parameters.executor-name >> == "win/default"
+          steps:
+            - run:
+                name: Install git
+                command: |
+                  apt update
+                  apt install -y git
       - run:
           name: Set VERSION environment variable
           command: |
-            echo "export VERSION=$(~/project/version.sh)" >> $BASH_ENV
+            echo "export VERSION=$(cd ~/project && ./version.sh)" >> $BASH_ENV
       - python-report
       # Running the pip executable causes an error with the win/default executor for some reason.
       - run: python -m pip install --upgrade --user pip
@@ -4029,19 +4037,12 @@ workflows:
     <<: *do-not-run-on-manual-trigger
     jobs:
       - test-cli:
-          pre-steps:
-            - run:
-                name: Install git
-                command: |
-                  apt update
-                  apt install -y git
           matrix:
             parameters:
               executor-name:
                 - "python-38"
                 - "python-39"
-      - test-cli:
-          executor-name: "win/default"
+                - "win/default"
   test-unit:
     <<: *do-not-run-on-manual-trigger
     jobs:
