fix: fix iris example to use reported metric name

--- a/examples/computer_vision/iris_tf_keras/adaptive.yaml
+++ b/examples/computer_vision/iris_tf_keras/adaptive.yaml
@@ -20,7 +20,7 @@ hyperparameters:
     maxval: 30
 searcher:
   name: adaptive_asha
-  metric: val_categorical_accuracy
+  metric: categorical_accuracy
   smaller_is_better: false
   time_metric: batches
   max_time: 6400
