--- a/examples/tutorials/mnist_pytorch/adaptive.yaml
+++ b/examples/tutorials/mnist_pytorch/adaptive.yaml
@@ -26,4 +26,6 @@ searcher:
   smaller_is_better: true
   max_trials: 16
   max_length: 14
+  time_metric: batches
+  max_time: 937  # 60,000 training images with batch size 64
 entrypoint: python3 train.py --epochs 1
