--- a/examples/tutorials/core_api_pytorch_mnist/adaptive.yaml
+++ b/examples/tutorials/core_api_pytorch_mnist/adaptive.yaml
@@ -28,7 +28,7 @@ searcher:
   name: adaptive_asha
   metric: test_loss
   smaller_is_better: true
-  max_trials: 500
+  max_trials: 50
   time_metric: epochs
   max_time: 20
-entrypoint: python3 model_def_adaptive.py
+entrypoint: python3 model_def_adaptive.py --epochs 20
