--- a/examples/tutorials/core_api_pytorch_mnist/distributed.yaml
+++ b/examples/tutorials/core_api_pytorch_mnist/distributed.yaml
@@ -28,9 +28,8 @@ hyperparameters:
 max_restarts: 0
 records_per_epoch: 60000
 searcher:
-  name: adaptive_asha
+  name: single
   metric: test_loss
   smaller_is_better: true
-  max_trials: 500
 resources:
   slots_per_trial: 4
